--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -17,8 +17,8 @@
   height: 8rem;
 
   &__logo {
-    width: 5rem;
-    height: 5rem;
+    width: 6rem;
+    height: 6rem;
     margin-left: 2rem;
     cursor: pointer;
     background-color: #f2df20;
@@ -27,23 +27,41 @@
     position: relative;
 
     &:hover {
-      transform: scaleX(2);
+      transform: scaleX(2.5);
     }
 
     &:hover &__text {
-      transform: translateX(-5rem);
-      // transform: scaleX(0.5);
-      // opacity: 0;
+      transform: translateX(4.3rem);
+
+      &::before {
+        opacity: 1;
+      }
+
+      &::after {
+        opacity: 0;
+      }
     }
 
     &__text {
       position: absolute;
-      bottom: 0;
+      bottom: -0.5rem;
       right: 0;
       color: #323330;
-      font-size: 2rem;
+      font-size: 2.7rem;
       margin-right: 0.5rem;
-      transition: all 0.5s;
+
+      &::before {
+        content: "SteveChan";
+        position: absolute;
+        right: 0;
+        transform: scaleX(0.4);
+        opacity: 0;
+      }
+
+      &::after {
+        content: "SC";
+        opacity: 1;
+      }
     }
   }
 
