Create animated button

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -6,7 +6,7 @@
   --color-blue-light: #d3daed;
   --color-blue-dark: #4b4e78;
 
-  --color-orange: #ffae04;
+  --color-orange: #5f5a4f;
   --color-orange-light: #ffbd06;
   --color-orange-dark: #ff9900;
 
