--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,25 +1,29 @@
 .container {
   margin: 0 auto;
-  max-width: 960;
-  padding: 0 2rem 2rem;
+  max-width: 120rem;
+  // min-height: 50rem;
+  margin: 5rem;
+  display: flex;
+  flex-direction: column;
+  height: 95vh;
 }
 
 .header {
 }
 
 .content {
+  flex: 1 1 auto;
 }
 
 .nav {
+  flex: 0 1 auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 8rem;
 
   &__logo {
     width: 6rem;
     height: 6rem;
-    margin-left: 2rem;
     cursor: pointer;
     background-color: #f2df20;
     transition: all 0.5s;
@@ -48,6 +52,7 @@
       right: 0;
       color: #323330;
       font-size: 2.7rem;
+      font-weight: 400;
       margin-right: 0.5rem;
 
       &::before {
@@ -83,6 +88,7 @@
 
       &:active,
       &:hover {
+        font-weight: 400;
         color: var(--color-blue-dark);
       }
 
@@ -141,4 +147,11 @@
     bottom: -20%;
     left: -10%;
   }
+}
+
+.footer {
+  font-size: 1.5rem;
+  flex: 0 1 40px;
+  text-align: center;
+  // vertical-align: bottom;
 }
