--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,6 @@
 @import "base";
+@import "animations";
 @import "layout";
-@import "home";
 @import "components";
+@import "./pages/home";
+@import "./pages/experiences";
