--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -5,23 +5,28 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width: 50%;
+    width: 50rem;
 
     &__name {
-      font-size: 6rem;
+      font-size: 4rem;
       color: var(--color-blue);
-      margin-top: 6rem;
+      margin-top: 7rem;
+
+      animation-name: moveInRight;
+      animation-duration: 0.8s;
+      animation-timing-function: ease-out;
     }
 
     &__desc {
-      font-size: 2.5rem;
+      margin-top: 2rem;
+      font-size: 2rem;
       color: var(--color-grey-dark-2);
     }
 
     &__download {
-      margin-top: 3rem;
+      margin-top: 7rem;
       border-radius: 50rem;
-      font-size: 2.5rem;
+      font-size: 2rem;
       background-color: var(--color-blue);
       text-decoration: none;
       color: var(--color-grey-light-1);
@@ -66,21 +71,10 @@
       }
     }
   }
-}
 
-@keyframes pulsate {
-  0% {
-    transform: scale(1);
-    box-shadow: none;
-  }
-
-  50% {
-    transform: scale(1.05);
-    box-shadow: 0 1rem 4rem rgba($color: #000000, $alpha: 0.25);
-  }
-
-  100% {
-    transform: scale(1);
-    box-shadow: none;
+  &__svg {
+    margin: 4rem auto;
+    width: 40%;
+    max-height: 50rem;
   }
 }
