--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -48,8 +48,8 @@ html {
   box-sizing: border-box;
   font-size: 62.5%; // 1rem = 10px, 10px/16px = 62.5%
 
-  @media only screen and (max-width: $bp-largest) {
-    // font-size: 50%;
+  @media only screen and (max-width: $bp-medium) {
+    font-size: 50%;
   }
 }
 
@@ -60,5 +60,4 @@ body {
 
   width: 100%;
   height: 100%;
-  overflow: hidden;
 }
