--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,11 +1,24 @@
 .container {
-  margin: 0 auto;
-  // max-width: 120rem;
-  // min-height: 50rem;
-  margin: 5rem 8rem;
+  max-width: 100rem;
+  margin: 5rem auto;
   display: flex;
   flex-direction: column;
-  height: 95vh;
+  height: 87vh;
+
+  @media only screen and (max-width: $bp-large) {
+    margin: 3rem 6rem;
+    height: 90vh;
+  }
+
+  @media only screen and (max-width: $bp-medium) {
+    margin: 3rem 5rem;
+    height: 92vh;
+  }
+
+  @media only screen and (max-width: $bp-small) {
+    margin: 2rem 4rem;
+    height: 94vh;
+  }
 }
 
 .header {
@@ -31,12 +44,26 @@
     transform-origin: left;
     position: relative;
 
+    @media only screen and (max-width: $bp-medium) {
+      width: 5.5rem;
+      height: 5.5rem;
+    }
+
+    @media only screen and (max-width: $bp-small) {
+      display: none;
+    }
+
     &:hover {
       transform: scaleX(2.5);
     }
 
     &:hover &__text {
       transform: translateX(4.7rem);
+      font-weight: 300;
+
+      @media only screen and (max-width: $bp-medium) {
+        transform: translateX(3.9rem);
+      }
 
       &::before {
         opacity: 1;
@@ -56,6 +83,10 @@
       font-weight: 400;
       margin-right: 0.5rem;
 
+      @media only screen and (max-width: $bp-medium) {
+        font-size: 2.4rem;
+      }
+
       &::before {
         content: "SteveChan";
         position: absolute;
@@ -72,13 +103,22 @@
   }
 
   &__bar {
-    width: 50%;
+    width: 60%;
     padding-top: 10px;
+
+    @media only screen and (max-width: $bp-medium) {
+      width: 70%;
+    }
+
+    @media only screen and (max-width: $bp-small) {
+      width: 95%;
+    }
 
     &-ul {
       list-style: none;
       display: flex;
-      justify-content: space-evenly;
+      justify-content: space-between;
+      flex-wrap: wrap;
     }
 
     &__link {
@@ -136,35 +176,8 @@
   }
 }
 
-.circle {
-  width: 30%;
-  height: 40%;
-  position: absolute;
-  border-radius: 60% 70% 40% 80%;
-  z-index: -1;
-  background-image: linear-gradient(
-    to right top,
-    var(--color-orange-light),
-    var(--color-orange-dark)
-  );
-
-  &__top {
-    top: 0;
-    right: 0;
-    margin-top: -10%;
-    margin-right: -15%;
-  }
-
-  &__bottom {
-    bottom: -20%;
-    left: -10%;
-  }
-}
-
 .footer {
   font-size: 1.5rem;
-  flex: 0 1 40px;
   text-align: center;
-  margin-bottom: 1rem;
-  // vertical-align: bottom;
+  z-index: 1;
 }
