--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -1,80 +1,116 @@
 .home {
   display: flex;
+  flex-direction: column;
+  margin: 1rem;
 
-  &__main {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    width: 50rem;
+  &__name {
+    font-size: 4rem;
+    color: var(--color-blue);
+    margin-top: 6rem;
 
-    &__name {
-      font-size: 4rem;
-      color: var(--color-blue);
-      margin-top: 7rem;
+    animation-name: moveInRight;
+    animation-duration: 0.8s;
+    animation-timing-function: ease-out;
 
-      animation-name: moveInRight;
-      animation-duration: 0.8s;
-      animation-timing-function: ease-out;
-    }
-
-    &__desc {
+    @media only screen and (max-width: $bp-small) {
       margin-top: 2rem;
-      font-size: 2rem;
-      color: var(--color-grey-dark-2);
-    }
-
-    &__download {
-      margin-top: 7rem;
-      border-radius: 50rem;
-      font-size: 2rem;
-      background-color: var(--color-blue);
-      text-decoration: none;
-      color: var(--color-grey-light-1);
-      position: relative;
-      overflow: hidden;
-
-      transition: all 0.5s;
-
-      & > * {
-        display: inline-block;
-        height: 100%;
-        width: 100%;
-        transition: all 0.5s;
-      }
-
-      &-visible {
-        padding: 1.5rem 4rem;
-      }
-
-      &-invisible {
-        position: absolute;
-        padding: 1.5rem 2.9rem;
-
-        left: 0;
-        top: -100%;
-      }
-
-      &:hover {
-        animation: pulsate 1s infinite;
-      }
-
-      &:hover &-visible {
-        transform: translateY(100%);
-      }
-
-      &:hover &-invisible {
-        top: 0;
-      }
-
-      &:focus {
-        outline: none;
-      }
     }
   }
 
-  &__svg {
-    margin: 4rem auto;
-    width: 40%;
-    max-height: 50rem;
+  &__main {
+    display: flex;
+    width: 100%;
+
+    @media only screen and (max-width: $bp-medium) {
+      // width: 40rem;
+    }
+
+    @media only screen and (max-width: $bp-small) {
+      flex-direction: column-reverse;
+    }
+
+    &__intro {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      width: 40%;
+
+      @media only screen and (max-width: $bp-small) {
+        width: 100%;
+      }
+
+      &__desc {
+        margin-top: 2rem;
+        font-size: 2rem;
+        color: var(--color-grey-dark-2);
+
+        @media only screen and (max-width: $bp-small) {
+          margin: 1rem auto;
+          align-self: center;
+        }
+      }
+
+      &__download {
+        margin: 7rem 2rem;
+        border-radius: 50rem;
+        font-size: 2rem;
+        background-color: var(--color-blue);
+        text-decoration: none;
+        color: var(--color-grey-light-1);
+        position: relative;
+        overflow: hidden;
+        transition: all 0.5s;
+
+        @media only screen and (max-width: $bp-small) {
+          margin: 4rem 0;
+          align-self: center;
+        }
+
+        & > * {
+          display: inline-block;
+          height: 100%;
+          width: 100%;
+          transition: all 0.5s;
+        }
+
+        &-visible {
+          padding: 1.5rem 4rem;
+        }
+
+        &-invisible {
+          position: absolute;
+          padding: 1.5rem 2.9rem;
+
+          left: 0;
+          top: -100%;
+        }
+
+        &:hover {
+          animation: pulsate 1s infinite;
+        }
+
+        &:hover &-visible {
+          transform: translateY(100%);
+        }
+
+        &:hover &-invisible {
+          top: 0;
+        }
+
+        &:focus {
+          outline: none;
+        }
+      }
+    }
+
+    &__svg {
+      margin: -7rem auto;
+      width: 50%;
+      max-width: 35rem;
+
+      @media only screen and (max-width: $bp-small) {
+        margin: 2rem auto;
+      }
+    }
   }
 }
