Add timeline to experience

--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -27,3 +27,190 @@
     background-position: left 0 bottom 0;
   }
 }
+
+.timeline {
+  &--wrapper {
+    width: calc(100% - 24px);
+    padding: 12px;
+  }
+
+  & {
+    width: 100%;
+    max-width: 800px;
+    padding: 15px 0 0 0;
+    position: relative;
+    /* box-shadow: 0.5rem 0.5rem 2rem 0 rgba(0, 0, 0, 0.2); */
+    margin: 50px auto;
+  }
+
+  &:before {
+    content: "";
+    position: absolute;
+    top: 0px;
+    left: calc(27% + 6px);
+    bottom: 0px;
+    width: 0px;
+    border: 2px solid;
+  }
+
+  &:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+
+  @media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    &:before {
+      left: calc(1% + 6px);
+    }
+  }
+}
+
+.body {
+  &-container {
+    position: relative;
+    margin-left: 30px;
+  }
+
+  &-container:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+}
+
+.entry {
+  clear: both;
+  text-align: left;
+  position: relative;
+
+  .title {
+    margin-bottom: 0.5em;
+    float: left;
+    width: 28%;
+    position: relative;
+    height: 32px;
+  }
+
+  .title:before {
+    content: "";
+    position: absolute;
+    width: 8px;
+    height: 8px;
+    border: 4px solid;
+    background-color: #ffffff;
+    border-radius: 100%;
+    top: 15%;
+    right: -8px;
+    z-index: 99;
+    box-sizing: content-box;
+  }
+
+  .body {
+    margin: 0 0 3em;
+    float: right;
+    width: 70%;
+    color: #333;
+  }
+
+  .body p {
+    line-height: 1.4em;
+  }
+
+  .body h1,
+  .body h2,
+  .body h3,
+  .body h4,
+  .body h5,
+  .body h6 {
+    margin: 0;
+  }
+
+  .body p:first-child {
+    margin-top: 0;
+    font-weight: 400;
+  }
+
+  @media only screen and (max-width: 768px) {
+    .title:before {
+      top: 15%;
+      left: 3px;
+      right: auto;
+      z-index: 99;
+    }
+
+    .body {
+      margin: 20px 0 3em;
+      float: right;
+      width: 99%;
+    }
+
+    .title {
+      float: left;
+      width: 70%;
+    }
+  }
+}
+
+.timeline-item {
+  &--no-children .body-container {
+    background: transparent;
+    box-shadow: none;
+  }
+
+  &-date {
+    position: absolute;
+    top: -12px;
+    left: 0;
+    background: #ddd;
+    padding: 1px;
+    -webkit-clip-path: polygon(0% 0%, 95% 0%, 100% 50%, 95% 100%, 0% 100%);
+    clip-path: polygon(0% 0%, 95% 0%, 100% 50%, 95% 100%, 0% 100%);
+    height: 52px;
+    box-sizing: border-box;
+    width: 90%;
+  }
+
+  &-dateinner {
+    background: #e86971;
+    color: #fff;
+    padding: 0;
+    font-size: 1.8rem;
+    font-weight: bold;
+    margin: 0;
+    border-right-color: transparent;
+    -webkit-clip-path: polygon(0% 0%, 95% 0%, 100% 50%, 95% 100%, 0% 100%);
+    clip-path: polygon(0% 0%, 95% 0%, 100% 50%, 95% 100%, 0% 100%);
+    height: 50px;
+    width: 100%;
+    display: block;
+    line-height: 52px;
+    text-indent: 15px;
+  }
+
+  &--no-children .body-container::before {
+    display: none;
+  }
+
+  @media only screen and (max-width: 768px) {
+    &-date {
+      margin-left: 30px;
+      width: 45%;
+      min-width: 20rem;
+    }
+  }
+}
+
+.timeline--animate {
+  .entry .is-hidden {
+    visibility: hidden;
+  }
+
+  .entry .bounce-in {
+    visibility: visible;
+    -webkit-animation: bounce-in 0.4s;
+    -moz-animation: bounce-in 0.4s;
+    animation: bounce-in 0.4s;
+  }
+}
