--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -1,7 +1,25 @@
 .home {
   display: flex;
   flex-direction: column;
-  margin: 1rem;
+  margin: 4rem;
+
+  @media only screen and (max-width: $bp-largest) {
+  }
+
+  @media only screen and (max-width: $bp-large) {
+  }
+
+  @media only screen and (max-width: $bp-medium) {
+    margin: 3rem;
+  }
+
+  @media only screen and (max-width: $bp-small) {
+    margin: 2rem;
+  }
+
+  @media only screen and (max-width: $bp-smallest) {
+    margin: 1rem;
+  }
 
   &__name {
     font-size: 4rem;
