Setup  and style timeline

--- a/src/components/Timeline/VerticalTimeline.css
+++ b/src/components/Timeline/VerticalTimeline.css
@@ -11,25 +11,25 @@
 }
 .vertical-timeline::after {
   /* clearfix */
-  content: '';
+  content: "";
   display: table;
   clear: both;
 }
 
 .vertical-timeline::before {
   /* this is the vertical line */
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 18px;
   height: 100%;
   width: 4px;
-  background: white;
+  background: #d8d8d8;
 }
 
 @media only screen and (min-width: 1170px) {
   .vertical-timeline.vertical-timeline--two-columns {
-    width: 90%;
+    width: 100%;
   }
   .vertical-timeline.vertical-timeline--two-columns:before {
     left: 50%;
