--- a/src/components/Timeline/VerticalTimelineElement.css
+++ b/src/components/Timeline/VerticalTimelineElement.css
@@ -35,7 +35,8 @@
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  box-shadow: 0 0 0 4px white, inset 0 2px 0 rgba(0, 0, 0, 0.08), 0 3px 0 4px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 0 0 4px #d8d8d8, inset 0 2px 0 rgba(0, 0, 0, 0.08),
+    0 3px 0 4px rgba(0, 0, 0, 0.05);
 }
 .vertical-timeline-element-icon svg {
   display: block;
@@ -133,7 +134,8 @@
 .vertical-timeline-element-content {
   position: relative;
   margin-left: 60px;
-  background: white;
+  /* background: white; */
+  background: #f5f5f5;
   border-radius: 0.25em;
   padding: 1em;
   box-shadow: 0 3px 0 #ddd;
@@ -150,9 +152,10 @@
 .vertical-timeline-element-content h2 {
   color: #303e49;
 }
-.vertical-timeline-element-content p, .vertical-timeline-element-content .vertical-timeline-element-date {
+.vertical-timeline-element-content p,
+.vertical-timeline-element-content .vertical-timeline-element-date {
   font-size: 13px;
-  font-size: 0.8125rem;
+  font-size: 1.3rem;
   font-weight: 500;
 }
 .vertical-timeline-element-content .vertical-timeline-element-date {
@@ -161,47 +164,53 @@
 .vertical-timeline-element-content p {
   margin: 1em 0 0;
   line-height: 1.6;
+  font-weight: 200;
 }
 
 .vertical-timeline-element-title {
   margin: 0;
+  font-weight: 400;
+  color: #585858;
 }
 
 .vertical-timeline-element-subtitle {
   margin: 0;
+  font-weight: 300;
+  color: #797979;
 }
 
 .vertical-timeline-element-content .vertical-timeline-element-date {
   float: left;
-  padding: .8em 0;
-  opacity: .7;
+  padding: 0.8em 0;
+  opacity: 0.7;
 }
 .vertical-timeline-element-content-arrow {
-  content: '';
+  content: "";
   position: absolute;
   top: 16px;
   right: 100%;
   height: 0;
   width: 0;
   border: 7px solid transparent;
-  border-right: 7px solid white;
-
+  /* border-right: 7px solid white; */
+  border-right: 7px solid #f5f5f5;
 }
-.vertical-timeline-element--no-children .vertical-timeline-element-content-arrow {
+.vertical-timeline-element--no-children
+  .vertical-timeline-element-content-arrow {
   display: none;
 }
 @media only screen and (min-width: 768px) {
   .vertical-timeline-element-content h2 {
     font-size: 20px;
-    font-size: 1.25rem;
+    font-size: 2rem;
   }
   .vertical-timeline-element-content p {
     font-size: 16px;
-    font-size: 1rem;
+    font-size: 1.6rem;
   }
   .vertical-timeline-element-content .vertical-timeline-element-date {
     font-size: 14px;
-    font-size: 0.875rem;
+    font-size: 1.4rem;
   }
 }
 @media only screen and (min-width: 1170px) {
@@ -216,29 +225,45 @@
     transform: rotate(180deg);
   }
 
-  .vertical-timeline--two-columns .vertical-timeline-element-content .vertical-timeline-element-date {
+  .vertical-timeline--two-columns
+    .vertical-timeline-element-content
+    .vertical-timeline-element-date {
     position: absolute;
     width: 100%;
     left: 124%;
     top: 6px;
     font-size: 16px;
-    font-size: 1rem;
+    font-size: 1.6rem;
   }
 
-  .vertical-timeline--two-columns .vertical-timeline-element:nth-child(even):not(.vertical-timeline-element--left) .vertical-timeline-element-content,
-  .vertical-timeline--two-columns .vertical-timeline-element.vertical-timeline-element--right .vertical-timeline-element-content {
+  .vertical-timeline--two-columns
+    .vertical-timeline-element:nth-child(even):not(.vertical-timeline-element--left)
+    .vertical-timeline-element-content,
+  .vertical-timeline--two-columns
+    .vertical-timeline-element.vertical-timeline-element--right
+    .vertical-timeline-element-content {
     float: right;
   }
-  .vertical-timeline--two-columns .vertical-timeline-element:nth-child(even):not(.vertical-timeline-element--left) .vertical-timeline-element-content-arrow,
-  .vertical-timeline--two-columns .vertical-timeline-element.vertical-timeline-element--right .vertical-timeline-element-content-arrow {
+  .vertical-timeline--two-columns
+    .vertical-timeline-element:nth-child(even):not(.vertical-timeline-element--left)
+    .vertical-timeline-element-content-arrow,
+  .vertical-timeline--two-columns
+    .vertical-timeline-element.vertical-timeline-element--right
+    .vertical-timeline-element-content-arrow {
     top: 24px;
     left: auto;
     right: 100%;
     transform: rotate(0deg);
   }
 
-  .vertical-timeline--two-columns .vertical-timeline-element:nth-child(even):not(.vertical-timeline-element--left) .vertical-timeline-element-content .vertical-timeline-element-date,
-  .vertical-timeline--two-columns .vertical-timeline-element.vertical-timeline-element--right .vertical-timeline-element-content .vertical-timeline-element-date {
+  .vertical-timeline--two-columns
+    .vertical-timeline-element:nth-child(even):not(.vertical-timeline-element--left)
+    .vertical-timeline-element-content
+    .vertical-timeline-element-date,
+  .vertical-timeline--two-columns
+    .vertical-timeline-element.vertical-timeline-element--right
+    .vertical-timeline-element-content
+    .vertical-timeline-element-date {
     left: auto;
     right: 124%;
     text-align: right;
@@ -258,8 +283,12 @@
 
 @media only screen and (min-width: 1170px) {
   /* inverse bounce effect on even content blocks */
-  .vertical-timeline--two-columns.vertical-timeline--animate .vertical-timeline-element:nth-child(even):not(.vertical-timeline-element--left) .vertical-timeline-element-content.bounce-in,
-  .vertical-timeline--two-columns.vertical-timeline--animate .vertical-timeline-element.vertical-timeline-element--right .vertical-timeline-element-content.bounce-in {
+  .vertical-timeline--two-columns.vertical-timeline--animate
+    .vertical-timeline-element:nth-child(even):not(.vertical-timeline-element--left)
+    .vertical-timeline-element-content.bounce-in,
+  .vertical-timeline--two-columns.vertical-timeline--animate
+    .vertical-timeline-element.vertical-timeline-element--right
+    .vertical-timeline-element-content.bounce-in {
     -webkit-animation: cd-bounce-2-inverse 0.6s;
     -moz-animation: cd-bounce-2-inverse 0.6s;
     animation: cd-bounce-2-inverse 0.6s;
