--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -122,12 +122,24 @@
     }
 
     &__svg {
-      margin: -7rem auto;
-      width: 50%;
-      max-width: 35rem;
+      margin: -10rem auto;
+      width: 55rem;
+      background-image: url("../images/img_coding.svg");
+      background-repeat: no-repeat;
+      background-position: -25% 0;
+      background-size: 150%;
+
+      @media only screen and (max-width: $bp-medium) {
+        margin: -2rem auto;
+        background-size: 130%;
+      }
 
       @media only screen and (max-width: $bp-small) {
         margin: 2rem auto;
+        width: 40rem;
+        height: 30rem;
+        background-position: -50% center;
+        background-size: 120%;
       }
     }
   }
