--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -181,3 +181,9 @@
   text-align: center;
   z-index: 1;
 }
+
+.center__image {
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+}
