--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -38,7 +38,7 @@
   position: relative;
   height: 35rem;
   width: 27rem;
-  margin: 1rem;
+  margin: 2rem 1rem;
   // box-shadow: var(--shadow-dark);
 
   &__side {
@@ -109,14 +109,13 @@
   }
 
   &__heading {
-    font-size: 2.8rem;
+    font-size: 2.5rem;
     font-weight: 300;
-    text-transform: uppercase;
     text-align: right;
     color: #fff;
     position: absolute;
     top: 14rem;
-    right: 0.6rem;
+    right: 0.2rem;
     width: 75%;
   }
 
@@ -133,6 +132,7 @@
     margin: 1rem;
 
     &__title {
+      font-size: 2.3rem;
       color: var(--color-grey-dark-2);
     }
 
