--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -111,7 +111,7 @@
     }
 
     @media only screen and (max-width: $bp-small) {
-      width: 95%;
+      width: 100%;
     }
 
     &-ul {
@@ -177,9 +177,20 @@
 }
 
 .footer {
+  display: flex;
+  justify-content: center;
   font-size: 1.5rem;
-  text-align: center;
+  color: var(--color-grey-dark-2);
   z-index: 1;
+
+  @media only screen and (max-width: $bp-small) {
+    flex-direction: column;
+    align-items: center;
+
+    &__separate {
+      display: none;
+    }
+  }
 }
 
 .center__image {
