--- a/src/styles/pages/_contact.scss
+++ b/src/styles/pages/_contact.scss
@@ -1,9 +1,9 @@
 .contact {
-  margin-top: 15rem;
+  margin-top: 10rem;
 
-  @media only screen and (max-width: $bp-small) {
-    margin-top: 10rem;
-  }
+  // @media only screen and (max-width: $bp-small) {
+  //   margin-top: 10rem;
+  // }
 
   &__main {
     display: flex;
