--- a/src/styles/pages/_contact.scss
+++ b/src/styles/pages/_contact.scss
@@ -1,5 +1,5 @@
 .contact {
-  margin-top: 10rem;
+  margin-top: 8%;
 
   // @media only screen and (max-width: $bp-small) {
   //   margin-top: 10rem;
@@ -28,7 +28,7 @@
     }
     */
 
-    @media only screen and (max-width: $bp-medium) {
+    @media only screen and (max-width: 1000px) {
       width: 100%;
       padding: 4rem;
       padding-left: 7rem;
@@ -53,7 +53,7 @@
       transform: skewX(12deg);
       position: relative;
 
-      @media only screen and (max-width: $bp-medium) {
+      @media only screen and (max-width: 1000px) {
         transform: skewX(0);
       }
     }
@@ -86,9 +86,15 @@
         &-copy {
           position: absolute;
           color: #55a630;
-          right: -3rem;
+          right: -3.5rem;
           font-size: 1.5rem;
           font-weight: 400;
+
+          @media only screen and (max-width: $bp-small) {
+            right: -2.5rem;
+            font-size: 1.2rem;
+            top: 1.7rem;
+          }
         }
       }
 
@@ -112,8 +118,11 @@
         }
       }
 
-      @media only screen and (max-width: $bp-medium) {
+      @media only screen and (max-width: 1000px) {
         transform: skewX(0);
+      }
+
+      @media only screen and (max-width: $bp-medium) {
         margin-top: 2rem;
       }
     }
