--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -129,6 +129,11 @@
       position: relative;
       font-size: 2.2rem;
 
+      @media only screen and (max-width: $bp-medium) {
+        font-weight: 300;
+        color: var(--color-grey-dark-1);
+      }
+
       @media only screen and (max-width: $bp-smallest) {
         font-size: 2rem;
       }
