--- a/src/styles/pages/_experiences.scss
+++ b/src/styles/pages/_experiences.scss
@@ -11,6 +11,11 @@
 
     li {
       margin-top: 0.6rem;
+
+      @media only screen and (max-width: $bp-medium) {
+        font-weight: 300;
+        color: var(--color-grey-dark-1);
+      }
     }
   }
 }
