--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -62,6 +62,11 @@
         font-size: 2rem;
         color: var(--color-grey-dark-2);
 
+        @media only screen and (max-width: $bp-medium) {
+          font-weight: 300;
+          color: var(--color-grey-dark-1);
+        }
+
         @media only screen and (max-width: $bp-small) {
           margin: 1rem auto;
           align-self: center;
